# ec_ecology_toolbox

./: .gitmodules  .readthedocs.yaml  Makefile  README.md  extract_landscape.py  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: c-cpp.yml  python_ci.yml
dev/bench/: data.js
docs/: cag.md  conf.py  index.md  selection.md
ec_ecology_toolbox/: __init__.py
ec_ecology_toolbox/community_assembly_graph/: __init__.py  community_assembly_graph.py  custom_user_functions.py  example_nodes.py  other_functions.py
ec_ecology_toolbox/community_assembly_graph/benchmarking/: benchmarking.py
eco_ec_toolbox/: __init__.py
scripts/: cag.py  example.py  extract_landscape.py
source/: interaction_networks.hpp  nsga_helpers.hpp  wrapper.cc
source/Project_CAG/: community_assembly_graph.py  custom_user_functions.py  main.py
tests/: test_cag.py  test_example_nodes.py  test_interaction_networks.cc  test_nsga.cpp  test_toolbox.py
