[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python {project}/tests/test_toolbox.py"
skip = ["*musllinux*", "pp310-win*"]

[tool.pytest.ini_options]
markers = [
    "bench", "exclude"
]