[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.8.0"
]

build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python {project}/tests/test_toolbox.py"
skip = ["*musllinux*", "cp37*", "pp37*", "pp310-win*", "*i686*", "win32"]
before-all = "g++ --version"

manylinux-x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"
manylinux-pypy_x86_64-image = "quay.io/pypa/manylinux_2_28_x86_64"

[tool.pytest.ini_options]
markers = [
    "bench", "exclude"
]